--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 10em;
+    padding-top: 7.5em;
 
     box-sizing: border-box;
 }
@@ -72,6 +72,7 @@
     background-color: rgb(18, 143, 220);
     color: rgb(255, 255, 249);
     font-weight: 600;
+
 }
 
 .sign-up-submit-button:hover {
